--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -8,11 +8,20 @@
             <div>
                 <input type="email" placeholder="Email" formControlName="email"/>
             </div>
+
+            <div class="error-list" *ngIf="fc.email.errors && isSubmitted">
+                <div *ngIf="fc.email.errors.required">Should not be empty!</div>
+                <div *ngIf="fc.email.errors.email">Email is not correct!</div>
+            </div>
         </div>
         <div class="input-container">
             <label>Password</label>
             <div>
                 <input type="password" placeholder="Password" formControlName="password"/>
+            </div>
+
+            <div class="error-list" *ngIf="fc.password.errors && isSubmitted">
+                <div *ngIf="fc.password.errors.required">Should not be empty!</div>
             </div>
         </div>
         <div class="button">
