--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -18,6 +18,13 @@
     label="Password">
 </text-input>
         <default-button text="Login"></default-button>
+
+        <div class="register">
+            New User? &nbsp;
+            <a routerLink="/register"[queryParams]="{returnUrl:returnUrl}">
+                Register Here
+            </a>
+        </div>
     </form>
 </div>
 </div>
