--- a/frontend/src/app/components/partials/loading/loading.component.css
+++ b/frontend/src/app/components/partials/loading/loading.component.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: #ffffffea;
+    background-color: #ffffff;
     z-index: 10000;
     top: 0;
     left: 0;
@@ -15,7 +15,6 @@
     align-items: center;
     height: 80%;
     width: 100%;
-
 }
 
 img{
